setup tree sitter